# shoyu.nvim

./: .gitignore  Cargo.toml  README.md  build.lua  stylua.toml
lua/shoyu/: init.lua
plugin/: build.lua  shoyu.lua
src/: config.rs  font.rs  layout.rs  lib.rs  renderer.rs  safe_ffi.rs  syntax.rs  text_layout.rs  themes.rs
src/renderer/: color.rs  drawing.rs  gradient.rs  mod.rs
