[build-dependencies]
cc = '1.0'


[dependencies]
anyhow = '1.0'
base64 = '0.21'
fontdue = '0.7'
image = '0.24'
libc = '0.2'
owned_ttf_parser = '0.15'
rand = '0.8'
serde = { features = ['derive'], version = '1.0' }
serde_json = '1.0'
syntect = { default-features = false, features = [
  'default-syntaxes',
  'default-themes',
  'parsing',
  'regex-fancy',
], version = '5.2' }
thiserror = '1.0'
# cosmic-text for complex script rendering (Thai, Arabic, etc.)
cosmic-text = { version = '0.12', default-features = false, features = ['std', 'swash'] }
oxipng = { default-features = false, features = ['parallel'], version = '10.1.0' }


[lib]
name = 'shoyu'
crate-type = ['cdylib']


[package]
description = 'Beautiful code snippets in Neovim is easy, let me Shoyu!'
edition = '2024'
license = 'MIT'
name = 'shoyu'
version = '0.1.0'


[profile.dev]
debug = 'line-tables-only'


[profile.release]
opt-level = 'z'
codegen-units = 2
lto = 'thin'
panic = 'abort'
strip = 'symbols'
